# ANSM2

./: Dockerfile  README.md  docker-compose.yml
docker/base/: Dockerfile  docker-compose.base.yml  ros2-base-compose.yml  ros2-base-dockerfile
docker/dev/: Dockerfile  docker-compose.yml
docker/nav2/: docker-compose.yml  ros2-nav2-compose.yml  ros2-nav2-dockerfile
docker/yolo_seg/: Dockerfile  docker-compose.yml  requirements.txt
human_follower/: human_follower.cpp
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/svanm2_description/share/svanm2_description/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/svanm2_description/share/svanm2_description/launch/: display.launch.py  gazebo.launch.py  gazebo.launch.xml
install/svanm2_description/share/svanm2_description/urdf/: svanm2.urdf  svanm2_cam.urdf
install/svanm2_description/share/svanm2_description/xacro/: materials.xacro
log/: latest_build  latest_edit  latest_list
odom_tf_publisher/: package.xml
ros2_ws/src/: realsense_yolo.py  realsense_yolo_seg.py
ros2_ws/src/champ/champ/include/champ/kinematics/: kinematics.h
ros2_ws/src/champ/champ_bringup/launch/: bringup.launch.py
ros2_ws/src/svan_sw2/: README.md
ros2_ws/src/svan_sw2/svanm2_description/config/: joint_names_SVAN_URDF4.yaml
ros2_ws/src/svan_sw2/svanm2_description/rviz/: svanM2_demo.rviz
ros2_ws/src/svan_sw2/svanm2_description/urdf/: svanM2.csv  svanm2_cam.urdf
src/: myfile
src/champ/champ_base/config/ekf/: footprint_to_odom.yaml
src/champ/champ_base/src/: quadruped_controller.cpp
src/champ/champ_gazebo/launch/: gazebo.launch.py
src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/install/svan_gazebo/share/ament_index/resource_index/package_run_dependencies/: svan_gazebo
src/install/svan_gazebo/share/svan_gazebo/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
src/install/svan_msgs/share/svan_msgs/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
src/install/svan_msgs/share/svan_msgs/cmake/: ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_targets-extras.cmake  export_svan_msgs__rosidl_generator_cExport-noconfig.cmake  export_svan_msgs__rosidl_generator_cExport.cmake  export_svan_msgs__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  svan_msgs__rosidl_typesupport_cExport-noconfig.cmake  svan_msgs__rosidl_typesupport_cExport.cmake  svan_msgs__rosidl_typesupport_cppExport-noconfig.cmake  svan_msgs__rosidl_typesupport_introspection_cExport-noconfig.cmake
src/install/svan_msgs/share/svan_msgs/msg/: ImuData.msg  PoseEuler.msg  Position.idl  Trajectory.idl  Trajectory.msg  Twist.idl  Twist.msg
src/install/svanm2_description/share/svanm2_description/: local_setup.dsv  local_setup.sh  package.sh
src/install/velodyne_description/share/velodyne_description/: package.sh
src/install/velodyne_gazebo_plugins/share/velodyne_gazebo_plugins/: package.sh
src/install/velodyne_simulator/share/velodyne_simulator/: package.sh
src/log/: latest_build
src/m2_champ/: m2_champ_0.db3  metadata.yaml
src/ros2_ws/: README.md
src/ros2_ws/src/: README.md  issues.txt
src/ros2_ws/src/champ/champ_base/src/: message_relay.cpp  state_estimation.cpp
src/ros2_ws/src/champ/champ_bringup/launch/: bringup.launch.py
src/ros2_ws/src/champ/champ_config/launch/: gazebo.launch.py
src/ros2_ws/src/champ/champ_gazebo/src/: contact_sensor.cpp
src/ros2_ws/src/human_follower/: CMakeLists.txt  human_position_publisher.cpp  package.xml
src/ros2_ws/src/odom_tf_publisher/: CMakeLists.txt  odom_to_tf.cpp
src/ros2_ws/src/svan_sw2/svanm2_description/: CMakeLists.txt
src/ros2_ws/src/svan_sw2/svanm2_description/config/: command.txt  mapper_params_online_async.yaml  slam.yaml
src/ros2_ws/src/svan_sw2/svanm2_description/launch/: gazebo.launch.py  gazebo.launch.xml  localization_launch.py  navigation_launch.py  test.launch.py
src/ros2_ws/src/svan_sw2/svanm2_description/rviz/: navigation.rviz
src/ros2_ws/src/svan_sw2/svanm2_description/urdf/: mass_values_b1.yaml  svanm2_cam.urdf
src/ros2_ws/src/svan_sw2/svanm2_description/worlds/: room.world
src/ros2_ws/src/svan_sw2/svanm2_description/xacro/: svanM2_robot.xacro
src/svan_sw2/svanm2_description/: package.xml
src/svan_sw2/svanm2_description/config/: command.txt  issues.txt  joint_names_SVANM2_URDF.yaml
src/svan_sw2/svanm2_description/launch/: display.launch.py  display.launch.xml  gazebo.launch.py  gazebo.launch.xml  position.launch.py
src/svan_sw2/svanm2_description/urdf/log/: latest_edit
src/svan_sw2/svanm2_description/xacro/: leg.xacro  robot.xacro
src/svanm2_description/config/: issues.txt
src/svanm2_description/launch/: display.launch.py  gazebo.launch.py
src/svanm2_description/urdf/: m2.urdf
svanm2_description/: CMakeLists.txt  package.xml
svanm2_description/config/: controller_configuration.yaml
svanm2_description/launch/: display.launch.xml
svanm2_description/rviz/: urdf_viewer.rviz
svanm2_description/urdf/: _d435.urdf.xacro  svanm2.urdf  svanm2_cam.urdf
svanm2_description/xacro/: const.xacro  just_test.py  your_urdf.urdf
(+78 files in other folders)
