<?xml version="1.0"?>
<package format="2">
  <name>svanm2_description</name>
  <version>0.0.0</version>
  <description>The svanm2_description package</description>

  
  <maintainer email="meshin@todo.todo">meshin</maintainer>


  
  <license>TODO</license>


  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <!-- <build_depend>rclcpp</build_depend>
  <build_depend>rclpy</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_export_depend>rclcpp</build_export_depend>
  <build_export_depend>rclpy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>nav_msgs</exec_depend> -->

  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>xacro</exec_depend>
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
      <build_type>ament_cmake</build_type>
  </export>
</package>
